--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <!-- Plugin JavaScript -->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="vendor/magnific-popup/jquery.magnific-popup.js"></script>
 
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
