--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
     <!-- Custom styles for this template -->
     <link href="css/creative.css" rel="stylesheet">
-    <link href="css/image.css" rel="stylesheet">
     <link href="css/rotate.css" rel="stylesheet">
     <link href="css/href.css" rel="stylesheet">
     <link href="css/fm.revealator.jquery.css" rel="stylesheet">
@@ -87,7 +86,7 @@
                     <h2 class="section-heading text-white revealator-fade revealator-delay">Встречайте новую линейку MacBook Pro</h2>
                     <hr class="light my-4">
                     <p class="text-faded mb-4 revealator-fade revealator-delay">13 дюймовый MacBook Pro 2017 &mdash; от 100 000 рублей<br />13 дюймовый MacBook Pro 2017 с Touch Bar и TouchID &mdash; от 150 000 рублей<br />15 дюймовый MacBook Pro 2017 с Touch Bar и TouchID &mdash; от 200 000 рублей</p>
-                    <div class="image revealator-zoomout revealator-delay"><img style="width: 700px; height: 500px" src="img/macbook.png"></div>
+                    <div class="revealator-zoomout revealator-delay"><img style="width: 700px; height: 500px" src="img/macbook.png"></div>
                     <a class="btn btn-second btn-xl js-scroll-trigger revealator-fade revealator-delay" href="#services">Особенности</a>
                 </div>
             </div>
